// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelDisplayReferenceLink > should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-sm-11"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="form-control"
        id="dummy"
        name="dummy"
        path="dummy"
        readonly=""
        type="text"
        value="-"
      />
    </div>
    <div
      class="col-sm-1"
    >
      <a
        alt="Go to the Dummy"
        class="btn-link bg-transparent btn btn-secondary disabled"
        disabled=""
        href="/dummy/edit/1"
      >
        <svg
          class="me-1"
          fill="currentColor"
          height="32"
          style="height: 1rem; width: 1rem;"
          width="32"
        >
          <use
            xlink:href="/src/assets/images/bootstrap-icons.svg#box-arrow-up-right"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelDisplayReferenceLink > should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-sm-11"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="form-control"
        id="dummy"
        name="dummy"
        path="dummy"
        readonly=""
        type="text"
        value="baz"
      />
    </div>
    <div
      class="col-sm-1"
    >
      <a
        alt="Go to the Dummy"
        class="btn-link bg-transparent btn btn-secondary disabled"
        disabled=""
        href="/dummy/edit/1"
      >
        <svg
          class="me-1"
          fill="currentColor"
          height="32"
          style="height: 1rem; width: 1rem;"
          width="32"
        >
          <use
            xlink:href="/src/assets/images/bootstrap-icons.svg#box-arrow-up-right"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelDisplayReferenceLink > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-sm-11"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="form-control"
        id="dummy"
        name="dummy"
        path="dummy"
        readonly=""
        type="text"
        value="-"
      />
    </div>
    <div
      class="col-sm-1"
    >
      <a
        alt="Go to the Dummy"
        class="btn-link bg-transparent btn btn-secondary disabled"
        disabled=""
        href="/dummy/edit/1"
      >
        <svg
          class="me-1"
          fill="currentColor"
          height="32"
          style="height: 1rem; width: 1rem;"
          width="32"
        >
          <use
            xlink:href="/src/assets/images/bootstrap-icons.svg#box-arrow-up-right"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelDisplayReferenceLink > should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-sm-11"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="form-control"
        id="name"
        name="name"
        path="name"
        readonly=""
        type="text"
        value="-"
      />
    </div>
    <div
      class="col-sm-1"
    >
      <a
        alt="Go to the Dummy"
        class="btn-link bg-transparent btn btn-secondary disabled"
        disabled=""
        href="/dummy/edit/1"
      >
        <svg
          class="me-1"
          fill="currentColor"
          height="32"
          style="height: 1rem; width: 1rem;"
          width="32"
        >
          <use
            xlink:href="/src/assets/images/bootstrap-icons.svg#box-arrow-up-right"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelDisplayReferenceLink > should render with global override shorthand for model and attribute 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-sm-11"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="form-control"
        id="name"
        name="name"
        path="name"
        readonly=""
        type="text"
        value="-"
      />
    </div>
    <div
      class="col-sm-1"
    >
      <a
        alt="Go to the Dummy"
        class="btn-link bg-transparent btn btn-secondary disabled"
        disabled=""
        href="/dummy/edit/1"
      >
        <svg
          class="me-1"
          fill="currentColor"
          height="32"
          style="height: 1rem; width: 1rem;"
          width="32"
        >
          <use
            xlink:href="/src/assets/images/bootstrap-icons.svg#box-arrow-up-right"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
